# LabWebFinal

./: .gitignore  CMakeLists.txt  README.md  destroy.sh  init.sh  lighttpd.conf
include/: fcgi_handler.h  fileManager.h  file_lock.h  json.h  json_handler.h  system_error.h  webServer.h
src/: fcgi_handler.cpp  fcgi_main.cpp  fileManager.cpp  file_lock.cpp  json.cpp  json_handler.cpp  json_test.cpp  main.cpp  webServer.cpp
